<resources>
    <string name="app_name">ProjetoFinal-SmartCoffee</string>
    <string name="tecnologia">Tecnologia</string>
    <string name="salgados">Salgados</string>
    <string name="bebidas">Bebidas</string>
    <string name="cafetaria">Cafetaria</string>
    <string name="pastelaria">Pastelaria</string>
    <string name="users">Utilizadores</string>
    <string name="lastRegistered">Ultimo Registo</string>
    <string name="username">Username</string>
    <string name="logout">Sair</string>
    <string name="settings">Gerir Produtos</string>
    <string name="overview">Vista Geral</string>
    <string name="viewCustomers">Ver Clientes</string>
    <string name="admin">Administrador</string>
    <string name="block">Bloquear</string>
    <string name="remove">Remover</string>
    <string name="details">Detalhes</string>
    <string name="type">Tipo:</string>
    <string name="customer">Cliente</string>
    <string name="status">Estado:</string>
    <string name="changePass">Alterar Password</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirmar Password</string>
    <string name="register">Registe-se</string>
    <string name="loginNoAcc">Ainda não é cliente?</string>
    <string name="registerPerformLogin">Faça o Login</string>
    <string name="customerAlready">Já é cliente?</string>
    <string name="unblock">Desbloquear</string>
    <string name="regUserEmpty">O user não pode estar vazio!</string>
    <string name="regMailEmpty">O mail não pode estar vazio!</string>
    <string name="regPassEmpty">A password não pode estar vazia!</string>
    <string name="regPassNoMatch">As passwords não coincidem!</string>
    <string name="regUserExists">Este user já se encontra registado.</string>
    <string name="authUserEmpty">Insira o nome de utilizador.</string>
    <string name="authPassEmpty">Insira a password.</string>
    <string name="authUserNoExist">O utilizador não existe!</string>
    <string name="authAccountBlocked">Esta conta encontra-se bloqueada.</string>
    <string name="authInvalidAuth">Os detalhes são invalidos!</string>
    <string name="authLoginSuccess">O login foi efetuado com sucesso!</string>
    <string name="authErrorTitle">Erro</string>
    <string name="blocked">Bloqueado</string>
    <string name="menuOverview">Vista Geral</string>
    <string name="menuListCustomers">Ver Clientes</string>
    <string name="menuSettings">Gerir Produtos</string>
    <string name="menuLogout">Sair</string>
    <string name="language">pt</string>
    <string name="msgError">Erro</string>
    <string name="cancel">Cancelar</string>
    <string name="unableToBlockOwnAccount">Não pode bloquear a própria conta!</string>
    <string name="unableToChangeOwnAccountType">Não é possivel alterar o tipo de utilizador da própria conta!</string>
    <string name="passwordChanged">Password alterada com sucesso!</string>
    <string name="passwordNotMatchOrEmpty">As passwords não coincidem ou estão vazias!</string>
    <string name="unableToDeleteOwnAccount">Não pode remover a própria conta!</string>
    <string name="registeredMsg">Registo efetuado com sucesso!</string>
    <string name="manageProducts">Gerir Produtos</string>
</resources>