<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminMenuActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/templatebg" />

    <Button
        android:id="@+id/btnAdminLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/logouticon"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/logout"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="#464646"
        android:textSize="24dp"
        app:icon="@drawable/logouticon"
        app:iconGravity="start"
        app:iconSize="36dp"
        app:iconTint="#464646"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/btnAdminSettings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="216dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/logouticon"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/settings"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="#464646"
        android:textSize="24dp"
        app:icon="@drawable/settingsicon"
        app:iconGravity="start"
        app:iconSize="36dp"
        app:iconTint="#464646"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.69"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnAdminOverview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/eyeicon"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/overview"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="#464646"
        android:textSize="24dp"
        app:icon="@drawable/eyeicon"
        app:iconGravity="start"
        app:iconSize="36dp"
        app:iconTint="#464646"
        app:layout_constraintBottom_toTopOf="@+id/btnAdminListUsers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/btnAdminListUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:drawableLeft="@drawable/logouticon"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/viewCustomers"
        android:textAlignment="inherit"
        android:textAllCaps="false"
        android:textColor="#464646"
        android:textSize="24dp"
        app:icon="@drawable/usersicon"
        app:iconGravity="start"
        app:iconSize="36dp"
        app:iconTint="#464646"
        app:layout_constraintBottom_toTopOf="@+id/btnAdminSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="164dp"
        android:layout_height="164dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.059"
        app:srcCompat="@drawable/smartcoffee_logo" />

    <TextView
        android:id="@+id/tvAdminName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sitka_italic"
        android:text="Username"
        android:textAlignment="viewStart"
        android:textColor="#464646"
        android:textSize="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.899"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />

    <TextView
        android:id="@+id/tvTypeAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="112dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/admin"
        android:textColor="#464646"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.428" />



</androidx.constraintlayout.widget.ConstraintLayout>