<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/smartcoffeetemplatepage" />

    <Button
        android:id="@+id/button"
        android:layout_width="308dp"
        android:layout_height="45dp"
        android:backgroundTint="#BCBCBC"
        android:backgroundTintMode="src_atop"
        android:bufferType="normal"
        android:fontFamily="@font/sitka_italic"
        android:onClick="LoginPerformed"
        android:text="Login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#464646"
        android:theme="@style/Theme.AppCompat"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_login_24"
        app:iconGravity="textStart"
        app:iconTint="#464646"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

    <EditText
        android:id="@+id/tbPassword"
        android:layout_width="332dp"
        android:layout_height="36dp"
        android:background="@drawable/edittextbg"
        android:ems="10"
        android:fontFamily="@font/sitka_italic"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#191919"
        android:textColorHint="#FFB5B5B5"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.489" />

    <EditText
        android:id="@+id/tbUsername"
        android:layout_width="332dp"
        android:layout_height="36dp"
        android:background="@drawable/edittextbg"
        android:ems="10"
        android:fontFamily="@font/sitka_italic"
        android:gravity="start|top"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="#191919"
        android:textColorHint="#B5B5B5"
        android:textIsSelectable="false"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.402" />

    <TextView
        android:id="@+id/detalhes2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sitka_italic"
        android:text="Login"
        android:textColor="#464646"
        android:textSize="14pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.278" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:backgroundTintMode="src_atop"
        android:bufferType="normal"
        android:fontFamily="@font/sitka_italic"
        android:onClick="StartActivityRegister"
        android:text="@string/register"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#464646"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detalhes5" />

    <TextView
        android:id="@+id/detalhes5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sitka_italic"
        android:text="@string/loginNoAcc"
        android:textColor="#FEFEFE"
        android:textSize="8pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.901" />

</androidx.constraintlayout.widget.ConstraintLayout>